--- a/database/docker-compose.yaml
+++ b/database/docker-compose.yaml
@@ -3,14 +3,24 @@ services:
   db:
     image: postgres:16.2
     restart: always
-    environment:
-      POSTGRES_PASSWORD: admin123
-    ports:
-      - 5000:5432
     volumes:
       - ./pgdata:/var/lib/postgresql/data
+    env_file:
+      - .env
+    environment:
+      - PGDATA=/var/lib/postgresql/data/pgdata
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD?Variable not set}
+      - POSTGRES_USER=${POSTGRES_USER?Variable not set}
+      - POSTGRES_DB=${POSTGRES_DB?Variable not set}
+    ports:
+      - 5432:5432
+
   adminer:
     image: adminer
     restart: always
+    depends_on:
+      - db
+    environment:
+      - ADMINER_DESIGN=pepa-linha-dark
     ports:
       - 8080:8080
