FIX: flower integration, and networking in containers

--- a/prometheus_and_grafana/prometheus.yml
+++ b/prometheus_and_grafana/prometheus.yml
@@ -9,3 +9,6 @@ scrape_configs:
   - job_name: flower
     static_configs:
       - targets: ["flower:5555"]
+  - job_name: fastapi-app
+    static_configs:
+      - targets: ["data_filler:8888"]
