--- a/data_filler/pyproject.toml
+++ b/data_filler/pyproject.toml
@@ -22,6 +22,7 @@ uvicorn = "^0.30.1"
 sentry-sdk = "^2.5.1"
 celery = "^5.4.0"
 aiohttp = "^3.9.5"
+binance-connector = "^3.9.0"
 
 
 [tool.poetry.group.dev.dependencies]
